unpackaged/main/default/objects/nbavs__DialItem__c/nbavs__DialItem__c.object-meta.xml
<CustomObject>
    <label>Dial Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dial Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>