unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__CallEnd__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallEnd__c</fullName>
    <label>Call End</label>
    <type>DateTime</type>
</CustomField>