unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ErrorLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Log</label>
    <referenceTo>nbavs__ErrorLog__c</referenceTo>
    <relationshipLabel>Dial Item</relationshipLabel>
    <relationshipName>DialItem</relationshipName>
    <type>Lookup</type>
</CustomField>