unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>