unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Name__c</fullName>
    <formula>CASE( nbavs__DialList__r.nbavs__Object__c , &quot;Account&quot;,  nbavs__Account__r.Name , &quot;Contact&quot;, nbavs__Contact__r.FirstName + &#39; &#39; + nbavs__Contact__r.LastName, &quot;Lead&quot;,  nbavs__Lead__r.FirstName + &#39; &#39; + nbavs__Lead__r.LastName, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>