unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__NextRetryTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__NextRetryTime__c</fullName>
    <label>Time to attempt next retry</label>
    <type>DateTime</type>
</CustomField>