unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ObjectId__c</fullName>
    <formula>CASE( nbavs__DialList__r.nbavs__Object__c , &quot;Account&quot;, nbavs__Account__c, &quot;Contact&quot;, nbavs__Contact__c, &quot;Lead&quot;, nbavs__Lead__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Id</label>
    <type>Text</type>
</CustomField>