unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ObjectType__c</fullName>
    <formula>TEXT(nbavs__DialList__r.nbavs__Object__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Type</label>
    <type>Text</type>
</CustomField>