unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__OrderId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__OrderId__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Call Order</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>