unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__Phone__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>