unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__PreviewRejects__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PreviewRejects__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Preview Rejects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>