unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__RetryUpdates__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RetryUpdates__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Updates</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>