unpackaged/main/default/objects/nbavs__DialItem__c/fields/nbavs__State__c.field-meta.xml
<CustomField>
    <fullName>nbavs__State__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Preview</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Uncontactable</fullName>
                <label>Unreachable</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>